<resources>
    <string name="app_name">TimeUp</string>
    <string name="app_add">Добавить</string>
    <string name="app_clear">Очистить</string>
    <string name="app_select">Выбрать</string>
    <string name="app_delete">Удалить</string>
    <string name="app_change">Изменить</string>
    <string name="app_rename">Переименовать</string>
    <string name="app_completed">Выполнено</string>
    <string name="app_toComplete">Выполнить</string>
    <string name="app_toNonComplete">Отменить выполнение</string>
    <string name="app_save">Сохранить</string>
    <string name="app_statistic">Статистика</string>
    <string name="dialog_OK">Ок</string>
    <string name="dialog_CANCEL">Отмена</string>
    <string name="dialog_BACK">Назад</string>
    <string name="dialog_YES">Да</string>
    <string name="dialog_NO">Нет</string>
    <string name="dialog_CONFIRM">Принять</string>
    <string name="activityTasks_title">Задачи</string>
    <string name="fieldEvery">Каждый</string>
    <string name="fieldYear">год</string>
    <string name="fieldMonth">месяц</string>
    <string name="fieldWeak">неделя</string>
    <string name="fieldDay">день</string>
    <string name="fieldName">Название</string>
    <string name="fieldPriority">Приоритет</string>
    <string name="fieldDescription">Описание</string>
    <string name="fieldNotifycation">Уведомления</string>
    <string name="fieldEnterNameUnderTask">Введите название</string>
    <string name="fieldCheckList">Чек-лист</string>
    <string name="fieldEditCounter">Восстановить серию:</string>
    <string name="fieldCounter">Серия:</string>
    <string name="fieldTag">Теги:</string>
    <string name="fieldNameTag">Название тега:</string>
    <string name="fieldTypeDailyTask">Тип ежедневной задачи</string>
    <string name="fieldDayList">Повторять</string>
    <string name="fieldSeries">Выполнено подряд</string>
    <string name="fieldTypeHabit">Тип привычки</string>
    <string name="fieldTitle">Заглавие</string>
    <string name="fieldMessage">Сообщение</string>
    <string name="fieldTimeNotify">Время</string>
    <string name="fieldDateNotify">Дата</string>
    <string name="fieldExecute">Выполнить до:</string>
    <string name="fieldExecuteDaily">Выполнять:</string>
    <string name="fieldStart">Начало:</string>
    <string name="fieldEnd">Конец:</string>
    <string name="typeHabitPositivy">Полезная</string>
    <string name="typeHabitNegativy">Вредная</string>
    <string name="askDeleteTask">Вы хотите удалить задачу \"%s\" ?</string>
    <string name="askClearUnderTask">Вы хотите очистить весь чек-лист ?</string>
    <string name="askClearNotification">Вы хотите очистить уведомления ?</string>
    <string name="askDeleteUnderTask">Вы хотите удалить эту подзадачу ?</string>
    <string name="askDeleteNotification">Вы хотите удалить это уведомление ?</string>
    <string name="askDeleteTag">Удалить тег \"%s\" ?</string>
    <string name="askChangeTag">Выберите что сделать с тегом</string>
    <string name="eventAddTag">Добавление нового тега</string>
    <string name="eventChangeTag">Изменение тега</string>
    <string name="eventDeleteTag">Удаление тега</string>
    <string name="eventRenameTag">Изменение названия тега</string>
    <string name="eventAddNewUnderTask">Добавление новой подзадачи</string>
    <string name="eventAddNewNotification">Добавление нового уведомления</string>
    <string name="eventDeleteTask">Удаление задачи</string>
    <string name="eventEditUnderTask">Редактирование подзадачи</string>
    <string name="eventEditNotification">Редактирование уведомления</string>
    <string name="eventClearUnderTask">Очистка чек-листа</string>
    <string name="eventClearNotification">Очистка уведомлений</string>
    <string name="eventDeleteUnderTask">Удаление подзадачи</string>
    <string name="eventDeleteNotification">Удаление уведомления</string>
    <string name="eventEmptyField">Обязательное поле не заполнено</string>
    <string name="createTag">Создать тег</string>
    <string name="actualTask">Только действительные</string>
    <string name="setting">Настройки</string>
    <string name="sortingBy">Сортировать по…</string>
    <string name="filter">Фильтр…</string>
    <string name="tags">Теги</string>
    <string name="shortMode">Сокращенный вид</string>
    <string name="filterActual">Актуальные задачи</string>
    <string name="filterNonComplete">Только не выполненные</string>
    <string name="filterPriority">По приоритету</string>
    <string name="filterTag">Теги</string>
    <string-array name="strings_type_task">
        <item>Привычки</item>
        <item>Ежедневные дела</item>
        <item>Цели</item>
    </string-array>
    <string-array name="strings_priority_type_task">
        <item>Нормально</item>
        <item>Важно</item>
        <item>Очень важно</item>
    </string-array>
    <string-array name="strings_type_habit">
        <item>Вредная</item>
        <item>Полезная</item>
        <!--<item>Вредная и полезная</item>-->
    </string-array>
    <string-array name="strings_type_daily">
        <item>Ежедневно</item>
        <item>Еженедельно</item>
        <item>Ежемесячно</item>
        <item>Ежегодно</item>
    </string-array>
    <string-array name="sortingBy">
        <item>Без сортировки</item>
        <item>Отсортировать по имени</item>
        <item>Отсортировать по приоритету</item>
    </string-array>
    <string-array name="typeComplete">
        <item>Выполненно</item>
        <item>Не выполненно</item>
    </string-array>
</resources>
