<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item app:showAsAction="always"
          app:actionViewClass="android.widget.Spinner"
          android:title=""
          android:id="@+id/spinnerTypeTask" />

    <item
        android:id="@+id/addTag"
        app:showAsAction="never"
        android:title="@string/createTag"/>
    <item
        app:showAsAction="never"
        android:title="@string/actualTask"
        android:checkable="true"/>

    <item
        app:showAsAction="never"
        android:title="@string/setting"/>
    <item
        app:showAsAction="ifRoom"
        android:title="@string/sortingBy"/>
    <item
        android:id="@+id/tags"
        app:showAsAction="never"
        android:title="@string/tags" />
    <item
        app:showAsAction="never"
        android:title="@string/shortMode"
        android:checkable="true"/>
</menu>